[project]
name = "epc-scraper"
version = "0.1.0"
description = "Scraper for Alberta Emissions Performance Credit registry data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "nest-asyncio>=1.6",
    "selectolax>=0.3",
]

[project.optional-dependencies]
export = ["polars>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epc_scraper"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
